package com.example.tokitoki.ui.constants

object TestTags {
    const val SIGN_IN_CONTENTS = "SIGN_IN_CONTENTS"
    const val REGISTER_WITH_EMAIL_CONTENTS = "REGISTER_WITH_EMAIL_CONTENTS"
    const val REGISTER_WITH_EMAIL_TEXT_FIELD = "REGISTER_WITH_EMAIL_TEXT_FIELD"
    const val EMAIL_VERIFICATION_TEXT_FIELD = "EMAIL_VERIFICATION_TEXT_FIELD"
    const val EMAIL_VERIFICATION_CONTENTS = "EMAIL_VERIFICATION_CONTENTS"
    const val ABOUT_ME_CONTENTS = "ABOUT_ME_CONTENTS"
    const val ABOUT_ME_SECOND_CONTENTS = "ABOUT_ME_SECOND_CONTENTS"
    const val AGREEMENT_CONFIRMATION_CONTENTS = "AGREEMENT_CONFIRMATION_CONTENTS"
    const val AGREEMENT_CONFIRMATION_AGE_CHECKBOX = "AGREEMENT_CONFIRMATION_AGE_CHECKBOX"
    const val AGREEMENT_CONFIRMATION_POLICY_CHECKBOX = "AGREEMENT_CONFIRMATION_POLICY_CHECKBOX"
    const val ABOUT_ME_GENDER_CONTENTS = "ABOUT_ME_GENDER_CONTENTS"
    const val TK_BOTTOM_ARROR_NAVIGATION_NEXT_BTN = "TK_BOTTOM_ARROR_NAVIGATION_NEXT_BTN"
    const val TK_BOTTOM_ARROR_NAVIGATION_PREVIOUS_BTN = "TK_BOTTOM_ARROR_NAVIGATION_PREVIOUS_BTN"
    const val ABOUT_ME_GENDER_MALE = "ABOUT_ME_GENDER_MALE"
    const val ABOUT_ME_GENDER_FEMALE = "ABOUT_ME_GENDER_FEMALE"
    const val ABOUT_ME_BIRTHDAY_CONTENTS = "ABOUT_ME_BIRTHDAY_CONTENTS"
    const val ABOUT_ME_BIRTHDAY_TEXT_FIELD = "ABOUT_ME_BIRTHDAY_TEXT_FIELD"
    const val ABOUT_ME_NAME_TEXT_FIELD = "ABOUT_ME_NAME_TEXT_FIELD"
    const val ABOUT_ME_NAME_CONTENTS = "ABOUT_ME_NAME_CONTENTS"
    const val ABOUT_ME_TAG_CONTENTS = "ABOUT_ME_TAG_CONTENTS"
    const val ABOUT_ME_TAG_PAGE = "ABOUT_ME_TAG_PAGE"
    const val ABOUT_ME_THIRD_CONTENTS = "ABOUT_ME_THIRD_CONTENTS"
    const val ABOUT_ME_UPLOAD_PHOTO_CONTENTS = "ABOUT_ME_UPLOAD_PHOTO_CONTENTS"
    const val ABOUT_ME_UPLOAD_PHOTO_UPLOAD_INPUT_BOX = "ABOUT_ME_UPLOAD_PHOTO_UPLOAD_INPUT_BOX"
    const val ABOUT_ME_UPLOAD_PHOTO_UPLOAD_BOTTOM_CONTENTS = "ABOUT_ME_UPLOAD_PHOTO_UPLOAD_BOTTOM_CONTENTS"
    const val ABOUT_ME_PROF_INPUT_CONTENTS = "ABOUT_ME_PROF_INPUT_CONTENTS"
    const val ABOUT_ME_PROF_INPUT_MY_SELF_PAGER = "ABOUT_ME_PROF_INPUT_MY_SELF_PAGER"
}
